--- a/testee/test_20260218/W/config.yaml
+++ b/testee/test_20260218/W/config.yaml
@@ -1,4 +1,4 @@
-image: alpine:latest
+image: ubuntu_based_python:latest
 # or wireshark/tshark, or custom image with routing capabilities
 network:
   ip: 172.20.0.12
