[#0-W] add sniffing framework as "wall_main", use wireshark on W for debug purpose

--- a/testee/test_20260218/B/config.yaml
+++ b/testee/test_20260218/B/config.yaml
@@ -1,6 +1,8 @@
 image: ubuntu_based_python:latest
 start_script:
-  - python3 python.py
+  - "chmod +x ./simple_http_server.sh"
+  - ./simple_http_server.sh
 
 network:
   ip: 172.20.0.11
+  
