--- a/testee/test_20260218/B/config.yaml
+++ b/testee/test_20260218/B/config.yaml
@@ -1,7 +1,7 @@
 image: ubuntu_based_python:latest
 start_script:
-  - "chmod +x ./simple_http_server.sh"
-  - ./simple_http_server.sh
+  - "chmod +x ./proxy/proxy_server_start.sh"
+  - ./proxy/proxy_server_start.sh
 
 network:
   ip: 172.20.0.11
